--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ pids
 .devcontainer/
 
 .spark-workbench-id
+
+
+# Ignore VS Code Insiders Copilot AI review instructions
+.github/instructions/codacy.instructions.md
